--- a/www/index.html
+++ b/www/index.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html>
   <head>
     <meta charset="UTF-8" />
     <meta name="vviewport" content="width=device-width" />
-    <title>Demo-site DWW2</title>
+    <title>Demo-site DIGWO2</title>
     <link href="sstyles.css" rel="stylesheet" />
   </head>
 
